--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,13 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+# My Ignore List
+MFCApplication1/Debug/*
+MFCApplication1/MFCApplication1.VC.db
+MFCApplication1/MFCApplication1.sdf
+MFCApplication1/ipch/*
+MFCApplication1/MFCApplication1/MFCApplication1.aps
+MFCApplication1/MFCApplication1/Debug/*
+MFCApplication1/MFCApplication1/res/*
+MFCApplication1/MFCApplication1/UserImages.bmp
